Exception handling code refactor